--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.37",
     "bootstrap": "^5.3.3",
+    "swiper": "^11.1.10",
+    "vue": "^3.4.37",
+    "vue-i18n": "^9.14.0",
     "vue-intl": "^6.5.2"
   },
   "devDependencies": {
