--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^11.0.3",
     "bootstrap": "^5.3.3",
     "swiper": "^11.1.10",
+    "vtt.js": "^0.13.0",
     "vue": "^3.4.37",
+    "vue-audio": "^0.0.12",
     "vue-i18n": "^9.14.0",
     "vue-intl": "^6.5.2"
   },
